kubernetes-cfg/back-mongodb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-mongodb-service
  labels:
    app: back-mongodb-service
spec:
  #type: LoadBalancer
  ports:
   # the port that this service should serve on
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb-node

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: back-mongodb-deployment
  # these labels can be applied automatically
  # from the labels in the pod template if not set
  labels:
    app:  mongodb
    role: master
    tier: backend
spec:
  replicas: 1
  # selector can be applied automatically
  # from the labels in the pod template if not set
  # selector:
  #   app: guestbook
  #   role: master
  #   tier: backend
  template:
    metadata:
      labels:
        app: mongodb-node
        role: master
        tier: backend
    spec:
      containers:
      - name: mongodb-master
        image: mongo
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 27017
