kubernetes-cfg/back-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-mongodb-service
  labels:
    app: back-mongodb-service
spec:
  #type: LoadBalancer
  ports:
   # the port that this service should serve on
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb-node
