kubernetes-cfg/back-redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-redis-service
  labels:
    app:  redis
spec:
  #type: LoadBalancer
  ports:
   # the port that this service should serve on
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app:  redis-node

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: back-redis-deployment
  labels:
    app:  redis
    role: cache
    tier: backend-cache
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-node
        role: cache
        tier: backend-cache
    spec:
      containers:
      - name: redis-master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 6379
