kubernetes-cfg/back-restapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-restapi-service
  labels:
    app:  back-restapi-service
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app:  restapi-java
    role: master
    tier: backend
